<resources>
    <string name="app_name">VitChat</string>
    <string name="vitchat">VitChat</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="lastname">LastName</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="reset_password">Reset password</string>
    <string name="register">Register</string>
    <string name="reset_link_sent">The reset Link has een successfully sent</string>
    <string name="edit_text">Edit text</string>
    <string name="type_your_message">Type your message</string>
</resources>