<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ResetPasswordActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        android:textSize="32sp"
        android:textColor="@android:color/holo_green_dark"
        android:textAlignment="center"

        />
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        android:layout_margin="16dp"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColorHighlight="#00BCD4"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:layout_marginHorizontal="16dp"
        />

</LinearLayout>